[gd_scene load_steps=16 format=3 uid="uid://dal8xmutd0icq"]

[ext_resource type="Script" path="res://Characters/Fox/state_machineFox.gd" id="1_lbrgw"]
[ext_resource type="Script" path="res://Characters/Fox/Fox.gd" id="1_myj0p"]
[ext_resource type="PackedScene" uid="uid://p5ywhqks8o4" path="res://Hitbox/Hitbox.tscn" id="2_nqnwd"]
[ext_resource type="SpriteFrames" uid="uid://cpxk32wisgx34" path="res://Characters/Fox/FoxSprites.tres" id="4_ey18j"]

[sub_resource type="Animation" id="Animation_t6vu5"]
resource_name = "Bair"
length = 0.300002
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"BAIR"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.133333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_uwcit"]
resource_name = "Down_tilt"
length = 0.166668
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"DOWN_TILT"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.116667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_28guj"]
resource_name = "Idle"
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IDLE"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.15, 0.266667, 0.416667, 0.45, 0.533333, 0.65, 0.75, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_hedpg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IDLE"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ttlgo"]
_data = {
"Bair": SubResource("Animation_t6vu5"),
"Down_tilt": SubResource("Animation_uwcit"),
"Idle": SubResource("Animation_28guj"),
"RESET": SubResource("Animation_hedpg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iv3l7"]
size = Vector2(60, 94)

[sub_resource type="SystemFont" id="SystemFont_uc536"]
font_names = PackedStringArray("Verdana")
subpixel_positioning = 0
multichannel_signed_distance_field = true

[sub_resource type="FontVariation" id="FontVariation_adbh7"]
base_font = SubResource("SystemFont_uc536")
variation_opentype = {
2003265652: 400
}

[sub_resource type="SystemFont" id="SystemFont_vfxca"]
font_names = PackedStringArray("Verdana")
subpixel_positioning = 0
multichannel_signed_distance_field = true

[sub_resource type="FontVariation" id="FontVariation_v26rm"]
base_font = SubResource("SystemFont_vfxca")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvho2"]
size = Vector2(85, 47)

[node name="FOX" type="CharacterBody2D"]
collision_mask = 6
slide_on_ceiling = false
platform_on_leave = 2
platform_floor_layers = 6
script = ExtResource("1_myj0p")
hitbox = ExtResource("2_nqnwd")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1_lbrgw")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5, 1.5)
sprite_frames = ExtResource("4_ey18j")
animation = &"IDLE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_ttlgo")
}

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_iv3l7")

[node name="Raycasts" type="Node2D" parent="."]

[node name="GroundL" type="RayCast2D" parent="Raycasts"]
position = Vector2(-30, 40)
target_position = Vector2(0, 10)
collision_mask = 6
hit_from_inside = true

[node name="GroundR" type="RayCast2D" parent="Raycasts"]
position = Vector2(30, 40)
target_position = Vector2(0, 10)
collision_mask = 6
hit_from_inside = true

[node name="Ledge_Grab_F" type="RayCast2D" parent="Raycasts"]
position = Vector2(19, -15)
scale = Vector2(3, 3)
target_position = Vector2(20, 0)
collision_mask = 8
hit_from_inside = true

[node name="Ledge_Grab_B" type="RayCast2D" parent="Raycasts"]
position = Vector2(0, -38)
scale = Vector2(3, 3)
target_position = Vector2(-11, 0)
collision_mask = 8
hit_from_inside = true

[node name="Frames" type="Label" parent="."]
offset_left = -36.0
offset_top = -94.0
offset_right = 36.0
offset_bottom = -71.0
scale = Vector2(1.00731, 1.0045)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_adbh7")
text = "45"
horizontal_alignment = 1

[node name="State" type="Label" parent="."]
offset_left = -36.0
offset_top = -71.0
offset_right = 36.0
offset_bottom = -48.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_v26rm")
text = "Test"
horizontal_alignment = 1

[node name="Health" type="Label" parent="."]
offset_left = 42.0
offset_top = -68.0
offset_right = 114.0
offset_bottom = -45.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_v26rm")
text = "Health"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(67, 22)
shape = SubResource("RectangleShape2D_wvho2")
disabled = true
